--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -3,7 +3,7 @@ $default-font2: "Open Sans";
 // $file-form: ($file-formats: woff2 woff ttf);
 $addr: '../fonts/';
 $file-format: woff ttf;
-$file-format2: woff2 ttf;
+$file-format2: woff2 woff;
 
 @include font-face ($default-font2, $addr + "opensanslight/opensanslight", 300, $file-formats: $file-format2);
 @include font-face ($default-font2, $addr + "OpenSansSemiBold/OpenSansSemiBold", 600, $file-formats: $file-format);
