--- a/sourse/pug/blocks/s-contact/_s-contact.pug
+++ b/sourse/pug/blocks/s-contact/_s-contact.pug
@@ -3,7 +3,7 @@ mixin s-contact()
 	+b.s-contact.section.block-with-lazy#s-contact&attributes(attributes)
 		.container
 			.row.justify-content-center
-				.col-5
+				.col-md-5
 					+e.connection
 						h4 Звоните:
 						+e.connection-item
@@ -13,7 +13,7 @@ mixin s-contact()
 									a(href="tel:+7(3519)22-00-00") +7 (3519) 22-00-22
 								li
 									a(href="tel:+7(3519)42-15-11") +7 (3519) 42-15-11
-				.col-3
+				.col-md-3
 					+e.connection
 						h4 Пишите:
 						+e.connection-item
@@ -23,21 +23,27 @@ mixin s-contact()
 									a(href="mailto:abcde1135@mail.ru") abcde1135@mail.ru
 								li
 									a(href="mailto:abcde1135@yandex.ru") abcde1135@yandex.ru
-				.col-8
+				.col-lg-9
 					+b.messanger-block
-						h4 Задавайте вопросы,<br> мы всегда на связи
-						+e.item--viber(href="#")
-							+icon("viber") 
-							| WhatsApp
-						
-						+e.item--whatsapp(href="#")
-							+icon("whatsapp")
-							| Viber
-			h2.text-center Наш склад-магазин в Магнитогорске
-			h5.text-center К нам можно доехать за 15 минут из любой точки города
-			img.lazy(src="#" data-src="img/@2x/ofice.jpg", alt="")
-			h2.text-center Как добраться
-			<iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
+						.row
+							.col-md-4
+								+e.question
+									h4 Задавайте вопросы, мы всегда на связи
+							.col-sm-4
+								+e.item--whatsapp(href="#")
+									+icon("whatsapp") 
+									span WhatsApp
+							.col-sm-4
+								+e.item--viber(href="#")
+									+icon("viber")
+									span Viber
+			+e.warehouse.text-center
+				h2 Наш склад-магазин в Магнитогорске
+				h5 К нам можно доехать за 15 минут из любой точки города
+				img.lazy(src="#" data-src="img/@2x/ofice.jpg", alt="")
+			+e.map.text-center
+				h2 Как добраться
+				<iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
 
 
 	// end s-contact
