--- a/public/img/svg/_sprite.scss
+++ b/public/img/svg/_sprite.scss
@@ -33,6 +33,14 @@
 	font-size:(457/10)*1rem;
 	width:(457/457)*1em;
 }
+.icon-guarantee {
+	font-size:(368.03/10)*1rem;
+	width:(368.03/368.03)*1em;
+}
+.icon-refresh {
+	font-size:(491.24/10)*1rem;
+	width:(491.24/491.24)*1em;
+}
 .icon-safety-box {
 	font-size:(189.6/10)*1rem;
 	width:(189.6/189.6)*1em;
@@ -40,6 +48,10 @@
 .icon-search {
 	font-size:(53/10)*1rem;
 	width:(53/53)*1em;
+}
+.icon-shipped {
+	font-size:(500/10)*1rem;
+	width:(500/500)*1em;
 }
 .icon-tel {
 	font-size:(402/10)*1rem;
