--- a/sourse/sass/_fonts.scss
+++ b/sourse/sass/_fonts.scss
@@ -5,6 +5,7 @@ $addr: '../fonts/';
 $file-format: woff ttf;
 $file-format2: woff2 woff;
 
+@include font-face ($default-font2, $addr + "opensans/opensans", 400, $file-formats: $file-format2);
 @include font-face ($default-font2, $addr + "opensanslight/opensanslight", 300, $file-formats: $file-format2);
 @include font-face ($default-font2, $addr + "OpenSansSemiBold/OpenSansSemiBold", 600, $file-formats: $file-format);
 @include font-face ($default-font2, $addr + "OpenSansRegularItalic/OpenSansRegularItalic", italic, $file-formats: $file-format);
