--- a/sourse/pug/blocks/s-catalog/_s-catalog.pug
+++ b/sourse/pug/blocks/s-catalog/_s-catalog.pug
@@ -45,15 +45,28 @@ mixin s-catalog()
 
 mixin s-catalog-08()
 	// start s-catalog
-	+b.s-catalog.section&attributes(attributes)
-		.container
-			block
-				
+	+b.s-catalog--page&attributes(attributes) 
+			h1 Взломостойкие сейфы
+			+b.sort-catalog 
+				.row 
+					.col-auto Сортировать:    
+					.col-auto 
+						+b.LABEL.sort-input
+							+e.INPUT.input(type="radio" name="sort")
+							+e.text сначала дешевые    
+					.col-auto 
+						+b.LABEL.sort-input
+							+e.INPUT.input(type="radio" name="sort")
+							+e.text сначала дорогие
 			.row
 				- for (var x = 0; x < 4; x++)
 					+e.col.col-sm-6
 						+item-prod()
-			
-
+			+e.footer
+				+e.footer-text---page.text-center *При оформлении заказа  уточняйте цену по&nbsp;т: #[a(href="tel:8(3519)22-00-22") 8 (3519) 22-00-22]
+				+e.btn-more(type="button")
+					+icon("refresh")
+					| Загрузить еще
+				+pugin()
 	// end s-catalog
 
