--- a/sourse/pug/pages/layout/js-css.pug
+++ b/sourse/pug/pages/layout/js-css.pug
@@ -5,6 +5,7 @@ mixin allcss()
 	//- link(rel="stylesheet", href="libs/swiper/css/swiper.min.css")
 	link(rel="stylesheet", href="libs/slick-carousel/slick/slick.css")
 	link(rel="stylesheet", href="libs/@fancyapps/fancybox/jquery.fancybox.min.css")
+	link(rel="stylesheet", href="libs/ion-rangeslider/css/ion.rangeSlider.min.css")
 	link(rel="stylesheet", href="css/main.min.css")
 	
 mixin allcjs()
@@ -26,6 +27,7 @@ mixin allcjs()
 	script(src="libs/svg4everybody/svg4everybody.min.js")
 	// /for svg libs
 	script(src="libs/inputmask/jquery.inputmask.min.js")
+	script(src="libs/ion-rangeslider/js/ion.rangeSlider.min.js")
 	script(src="js/common.js")
 	//- cut text libs
 	//- script(src="libs/jquery.morelines.min.js") 
