--- a/sourse/sass/_vars.scss
+++ b/sourse/sass/_vars.scss
@@ -632,8 +632,8 @@ $custom-file-text: (en: "Browse"
 
 // // Pagination
 
-// $pagination-padding-y:              .5rem !default;
-// $pagination-padding-x:              .75rem !default;
+$pagination-padding-y: .1rem !default;
+$pagination-padding-x: .45rem !default;
 // $pagination-padding-y-sm:           .25rem !default;
 // $pagination-padding-x-sm:           .5rem !default;
 // $pagination-padding-y-lg:           .75rem !default;
@@ -641,20 +641,20 @@ $custom-file-text: (en: "Browse"
 // $pagination-line-height:            1.25 !default;
 
 // // $pagination-color:                  $link-color !default;
-// $pagination-bg:                     $white !default;
+$pagination-bg: transparent !default;
 // // $pagination-border-width:           $border-width !default;
-// $pagination-border-color:           $gray-300 !default;
+$pagination-border-color: transparent !default;
 
 // // $pagination-focus-box-shadow:       $input-btn-focus-box-shadow !default;
 // $pagination-focus-outline:          0 !default;
 
 // // $pagination-hover-color:            $link-hover-color !default;
-// $pagination-hover-bg:               $gray-200 !default;
-// $pagination-hover-border-color:     $gray-300 !default;
+$pagination-hover-bg: transparent !default;
+$pagination-hover-border-color: transparent !default;
 
-// // $pagination-active-color:           $component-active-color !default;
-// // $pagination-active-bg:              $component-active-bg !default;
-// // $pagination-active-border-color:    $pagination-active-bg !default;
+$pagination-active-color: #114da2 !default;
+$pagination-active-bg: transparent !default;
+$pagination-active-border-color: transparent !default;
 
 // $pagination-disabled-color:         $gray-600 !default;
 // $pagination-disabled-bg:            $white !default;
@@ -881,8 +881,8 @@ $custom-file-text: (en: "Browse"
 
 // // Breadcrumbs
 
-$breadcrumb-padding-y:              1.3rem !default;
-$breadcrumb-padding-x:              1.8rem !default;
+$breadcrumb-padding-y: 1.3rem !default;
+$breadcrumb-padding-x: 1.8rem !default;
 // $breadcrumb-item-padding-x:         .5rem !default;
 
 // $breadcrumb-margin-bottom:          1rem !default;
