--- a/sourse/pug/blocks/s-contact/_s-contact.scss
+++ b/sourse/pug/blocks/s-contact/_s-contact.scss
@@ -1,7 +1,7 @@
 .s-contact {
-	// padding-top: rem(50);
+	padding-top: rem(55);
 	font-weight: 500;
-	// padding-bottom: rem();
+	padding-bottom: rem(85);
 	&__connection {
 		padding-bottom: rem(30);
 		&-item {
@@ -37,10 +37,12 @@
 	.messanger-block {
 		box-shadow: 3px 2px 35px rgba(154, 187, 206, 0.17);
 		border-radius: 2px;
-		// justify-content: space-around;
 		padding: rem(30);
+		.row{
+		@include roww(0);
+		}
 		@include media-breakpoint-up(lg){
-			padding: rem(37) rem(70) rem(33);
+			padding: rem(37) rem(72) rem(33) rem(83);
 		}
 		margin-bottom: rem(57);
 		&__question{
@@ -54,7 +56,7 @@
 			display: inline-block;
 			min-height: rem(60);
 			display: flex;
-			// flex-grow: 1;
+			flex-grow: 1;
 			min-width: rem(180);
 			align-items: center;
 			justify-content: center;
@@ -84,6 +86,12 @@
 			}
 			&--viber, &--whatsapp {
 				background-color: transparent;
+				margin: 0;
+			}
+			&__question {
+				@include media-breakpoint-up(lg) {
+					min-width: rem(216);
+				}
 			}
 		}
 	}
@@ -101,14 +109,69 @@
 			width: 100%;
 			padding-bottom: rem(60);
 			@include media-breakpoint-up(lg){
-				padding-bottom: rem(105);
+				padding-bottom: rem(110);
 			}
 		}
 	}
-	&__map {
+	.how-to-get {
 		h2 {
 			@extend h2;
 			padding-bottom: rem(40);
+		}
+		.map-wrap{
+			position: relative;
+		}
+		&__contact-block {
+			position: absolute;
+			@include media-breakpoint-down(md) {
+				position: inherit;
+				margin-bottom: rem(60);
+			}
+			@include media-breakpoint-up(lg) {
+			top: 8%;
+			left: rem(65);
+			}
+			img {
+				width: rem(25);
+			}
+			a {
+				color: $body-color;
+				&:hover {
+					text-decoration: none;
+					color: #398bff;
+				}
+				&:active {
+					color: #1c61c1;
+				}
+			}
+			ul {
+
+				padding: rem(54) rem(45) rem(46) rem(33);
+				background-color: #fff;
+				box-shadow: 3px 2px 35px rgba(154, 187, 206, 0.17);
+				border-radius: $border-radius-lg;
+				li {
+					position: relative;
+					text-align: left;
+					list-style: none;
+					padding-left: rem(47);
+					font-size: rem(18);
+					padding-bottom: rem(38);
+					&:nth-last-child(1) {
+						padding-bottom: 0;
+					}
+					span {
+						font-weight: 400;
+						letter-spacing: 0.36px;
+
+					}
+					img {
+						position: absolute;
+						left: 0;
+						top: rem(6);
+					}
+				}
+			}
 		}
 	}
 
