--- a/sourse/pug/blocks/s-contact/_s-contact.pug
+++ b/sourse/pug/blocks/s-contact/_s-contact.pug
@@ -1,6 +1,6 @@
 mixin s-contact()
 	// start s-contact
-	+b.s-contact.section.block-with-lazy#s-contact&attributes(attributes)
+	+b.s-contact.block-with-lazy#s-contact&attributes(attributes)
 		.container
 			.row.justify-content-center
 				.col-md-5
@@ -41,9 +41,28 @@ mixin s-contact()
 				h2 Наш склад-магазин в Магнитогорске
 				h5 К нам можно доехать за 15 минут из любой точки города
 				img.lazy(src="#" data-src="img/@2x/ofice.jpg", alt="")
-			+e.map.text-center
+			+b.how-to-get.text-center
 				h2 Как добраться
-				<iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
+				.map-wrap
+					+e.contact-block
+						ul
+							li 
+								| Адрес: <br>
+								span г. Магнитогорск, <br> ул.Куйбышева, д.25
+								img.lazy(src="#" data-src="img/svg/maps-and-flags.svg", alt="")
+							li 
+								| Телефон: <br>
+								a(href="tel:+7(3519)22-00-00") +7 (3519) 22-00-22
+								img.lazy(src="#" data-src="img/svg/telephone.svg", alt="")
+							li 
+								| Email: <br>
+								a(href="mailto:abcde1135@mail.ru") abcde1135@mail.ru
+								img.lazy(src="#" data-src="img/svg/envelope-shape.svg", alt="")
+							li 
+								| Работаем: <br>
+								span пн-пт, с 10:00 до 18:00
+								img.lazy(src="#" data-src="img/svg/clock-circular-outline.svg", alt="")
+					<iframe src="https://yandex.ua/map-widget/v1/?um=constructor%3Adb87e64c101c358488e2d4335179bc5033ea071ebbe8c26551fe3a6251514200&amp;source=constructor" width="100%" height="578" frameborder="0"></iframe>
 
 
 	// end s-contact
