--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
@@ -108,13 +108,13 @@ mixin s-prod-head-basket()
 				.col-lg-4
 					+b.s-prod-head-sidebar
 						+e.number
-							button -
+							button 
 							input(type="text" placeholder="1")
-							button +
+							button 
 						+e.amount
 							| 2000 Р
 						+e.remove
-							button x
+							button 
 			.row.to-order.justify-content-end
 				.col-lg-3.col-md-6
 					h5 Итого без доставки
