--- a/sourse/pug/pages/14-step-2.pug
+++ b/sourse/pug/pages/14-step-2.pug
@@ -2,29 +2,30 @@ extends layout/main.pug
 
 
 include ../blocks/s-content/_s-content.pug
+include ../blocks/s-contact/_s-contact.pug
 include ../blocks/s-category/_s-category.pug
 include ../blocks/s-catalog/_s-catalog.pug
 include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
 include ../blocks/s-video/_s-video.pug
 include ../blocks/s-shipping/_s-shipping.pug
-include ../blocks/s-prod-head/_s-prod-head.pug
-
-
+include ../blocks/s-step2/_s-step2.pug
 
 block variables
-	- let  mainPage= 'inner-page'
+	- let  mainPage= 'inner-page-2'
+		// для отступов у h1
 block title
-	- let  title= 'Корзина с товаром'
+	- let  title= 'Оформление заказа'
 	title= title
 block pagecontent 
 	//- +mob-mnu()
 	+header()
 		+top-line()
 		+top-nav()
-	+page-head("Главная", "Доставка и оплата", "Взломостойкие сейфы", "Сейф Aiko T-17 EL")
-		// Стилизация находится в main рядом с breadcrumb
-		.text-right.back-to-main 
-				a(href="#") Назад к сейфам
-	+s-prod-head-basket
+	+page-head("Главная", "Корзина", title)
+		.text-center
+			h1 Оформление заказа
+	+s-step2
+	// +s-form2()
+	// +s-video
 	+footer()
