--- a/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
+++ b/sourse/pug/blocks/s-prod-head/_s-prod-head.pug
@@ -80,7 +80,7 @@ mixin s-prod-head-basket()
 						+e.inner
 							+e.slider--lg.--lg-js
 								- for (var x = 0; x < 5; x++)
-									+e.slide--lg
+									+e.slide
 										a(href= src data-fancybox="prod-gal")
 											+img()
 											// возможно я не правильно убрал слайдер
