--- a/sourse/pug/blocks/s-error/_s-error.pug
+++ b/sourse/pug/blocks/s-error/_s-error.pug
@@ -14,3 +14,16 @@ mixin s-error()
 						+icon("search")
 			h5 Удачи!
 	// end s-error
+
+mixin s-error2()
+	// start s-error2
+	+b.s-error.not-found#s-error&attributes(attributes)
+		.container.text-center
+			h4 По&nbsp;вашему запросу &laquo;взломастойкие&raquo; ничего на&nbsp;найдено. Попробуйте еще раз.
+			+b.form-search.d-lg-block
+				form
+					input(type="text" placeholder="Например: взломостойкие Aiko айко") 
+					+e.BUTTON.btn(type="button")
+						+icon("search")
+
+	// end s-error2
