--- a/sourse/pug/blocks/s-form/_s-form.scss
+++ b/sourse/pug/blocks/s-form/_s-form.scss
@@ -182,3 +182,10 @@
 	@include media-breakpoint-down(xs) {}
 
 }
+.inner-page {
+	.form-wrap__group-title {
+		color: $body-color;
+		letter-spacing: 0.4px;
+		padding-top: rem(40);
+	}
+}
