--- a/sourse/pug/pages/15-step-3.pug
+++ b/sourse/pug/pages/15-step-3.pug
@@ -9,24 +9,23 @@ include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
 include ../blocks/s-video/_s-video.pug
 include ../blocks/s-shipping/_s-shipping.pug
-include ../blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
-include ../blocks/s-filter/_s-filter.pug
-include ../blocks/s-error/_s-error.pug
+include ../blocks/s-step3/_s-step3.pug
 
 block variables
-	- let  mainPage= 'inner-page'
+	- let  mainPage= 'inner-page-2'
+		// для отступов у h1
 block title
-	- let  title= 'Поиск'
+	- let  title= 'Оформление заказа'
 	title= title
 block pagecontent 
 	//- +mob-mnu()
 	+header()
 		+top-line()
 		+top-nav()
-		+page-head("Главная","Каталог ", title)
-		// .container
-				+e.title-search Найдено #[span.text-primary.fw-500 3 товара]
-	+s-error2
-	+s-form-19()
-	//- +s-video
+	+page-head("Главная", "Корзина", title)
+		.text-center
+			h1 Оформление заказа
+	+s-step3
+	// +s-form2()
+	// +s-video
 	+footer()
