--- a/sourse/pug/pages/22-thanks-qwiz.pug
+++ b/sourse/pug/pages/22-thanks-qwiz.pug
@@ -2,31 +2,26 @@ extends layout/main.pug
 
 
 include ../blocks/s-content/_s-content.pug
-include ../blocks/s-contact/_s-contact.pug
 include ../blocks/s-category/_s-category.pug
 include ../blocks/s-catalog/_s-catalog.pug
 include ../blocks/s-pdf/_s-pdf.pug
 include ../blocks/s-steps/_s-steps.pug
 include ../blocks/s-video/_s-video.pug
 include ../blocks/s-shipping/_s-shipping.pug
-include ../blocks/s-shipping-and-payment/_s-shipping-and-payment.pug
-include ../blocks/s-filter/_s-filter.pug
-include ../blocks/s-error/_s-error.pug
+include ../blocks/s-thanks/_s-thanks.pug
+
+
 
 block variables
-	- let  mainPage= 'inner-page'
+	- let  mainPage= null
 block title
-	- let  title= 'Поиск'
+	- let  title= 'Спасибо, мы приняли вашу заявку!'
 	title= title
 block pagecontent 
 	//- +mob-mnu()
 	+header()
 		+top-line()
 		+top-nav()
-		+page-head("Главная","Каталог ", title)
-		// .container
-				+e.title-search Найдено #[span.text-primary.fw-500 3 товара]
-	+s-error2
-	+s-form-19()
-	//- +s-video
+	+page-head("Вернуться на сайт")
+	+s-thanks2
 	+footer()
