--- a/sourse/pug/blocks/s-contact/_s-contact.scss
+++ b/sourse/pug/blocks/s-contact/_s-contact.scss
@@ -67,6 +67,7 @@
 			position: relative;
 			@include media-breakpoint-down(md) {
 				margin-bottom: rem(20);
+				margin-left: rem(15);
 			}
 			&:hover {
 				border: 1px solid #398bff;
@@ -120,6 +121,9 @@
 		}
 		.map-wrap{
 			position: relative;
+			iframe {
+				width: 100%;
+			}
 		}
 		&__contact-block {
 			position: absolute;
