--- a/sourse/pug/blocks/s-error/_s-error.pug
+++ b/sourse/pug/blocks/s-error/_s-error.pug
@@ -22,7 +22,7 @@ mixin s-error2()
 			h4 По&nbsp;вашему запросу &laquo;взломастойкие&raquo; ничего на&nbsp;найдено. Попробуйте еще раз.
 			+b.form-search.d-lg-block
 				form
-					input(type="text" placeholder="Например: взломостойкие Aiko айко") 
+					input(type="text" placeholder="Поиск по названию или назначению") 
 					+e.BUTTON.btn(type="button")
 						+icon("search")
 
