--- a/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
+++ b/sourse/pug/blocks/s-qwiz/_s-qwiz.pug
@@ -37,7 +37,7 @@ mixin s-qwiz()
 
 							+item("10","Вопрос 1 из 4","Что планируете хранить в сейфе?", "not")
 								+radio("Деньги и драгоценности","qwiz-1")(class="col-sm-6")
-								+radio("Оружие","qwiz-1")(class="col-6" checked)
+								+radio("Оружие","qwiz-1")(class="col-6")
 								+radio("Документы","qwiz-1")(class="col-sm-6")
 								+radio("Другое","qwiz-1")(class="col-sm-6")
 							+item("20","Вопрос 2 из 4","От чего хотите защитить содержимое сейфа?")
