--- a/sourse/pug/blocks/s-step2/_s-step2.pug
+++ b/sourse/pug/blocks/s-step2/_s-step2.pug
@@ -38,7 +38,7 @@ mixin s-step2()
 						+radio("Банковский платеж для юр. лиц","payment")
 						+radio("Перевод на карту Сбербанка","payment")
 						+radio("Наличными","payment")
-						p.attention Только при покупке <br>из магазина
+							span.attention Только при покупке <br>из магазина
 			+b.contact-information.row
 				.col-lg-6
 					h4 Введите адрес доставки
